assigning tags natevly in C++

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,8 +55,9 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 bAuthorizeAutomaticWidgetVariableCreation=False
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Aura")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Aura")
++ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/TopDownRPG")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/TopDownRPG")
+AssetManagerClassName=/Script/TopDownRPG.RPGAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
