new base level, start level design

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/StartupMap.StartupMap
-EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+GameDefaultMap=/Game/Maps/Dungeon.Dungeon
+EditorStartupMap=/Game/Maps/Dungeon.Dungeon
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -39,6 +39,10 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RenderSettings]
+r.TextureStreaming=True
+r.Streaming.PoolSize=1000
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
@@ -136,3 +140,4 @@ bAllowClientSideNavigation=True
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/TopDownRPG.RPGEffectActor.bDestroyOnEffectRemoval",NewName="/Script/TopDownRPG.RPGEffectActor.bDestroyOnEffectApplication")
+
