electrcute has now visual efecta nd sound

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,4 @@ CopyrightNotice=
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 +AbilitySystemGlobalsClassName="/Script/TopDownRPG.RPGAbilitySystemGlobals"
++GameplayCueNotifyPaths=/Game/Blueprints/AbilitySystem/GameplayCueNotifies
